# jlweather

./: README.rst
run/: .gitignore
run/MacOS/: miniW_output_display.jl
run/cmake/: CMakeLists.txt
run/crusher/: .gitignore  Makefile  Makefile.old  Manifest.toml.f  Project.toml  Project.toml.f  Project.toml.old  README.md  crusher_commands.sh  run.sh  runtest.sh  runtest_forthip.sh
run/frontier/: Makefile  basicperf.txt  proxy.sh  roofline.csv  roofline.txt  run.sh
run/macos/: Makefile
run/summit/: Makefile
src/: miniWeather_mpi.jl
src/fortran/: miniWeather_mpi_openacc.F90
src/jai/: halo_recvbuf.knl  miniWeather_accel.jl  miniWeather_accel_cuda.jl  miniWeather_accel_hip.jl  tend_apply.knl.org  tend_apply_diff.knl  tend_apply_same.knl  tend_z.knl
src/jai/cuda/: miniWeather_accel.jl  tend_apply.knl  tend_apply1.knl  tend_apply2.knl
src/jai/cuda_hip/: halo_1rank.knl  halo_inject.knl  halo_recvbuf.knl  halo_sendbuf.knl  halo_z.knl  miniWeather_accel_mutiframework.jl  reduction.knl  tend_z_calc.knl
src/jai/forthip0/: halo_1rank.knl  halo_inject.knl  halo_recvbuf.knl  halo_sendbuf.knl  halo_z.knl  miniWeather_accel.jl  tend_apply.knl  tend_x.knl  tend_z.knl  tend_z_calc.knl
src/jai/forthip1/: miniWeather_accel.jl  tend_apply.knl  tend_x.knl  tend_x_calc.knl  tend_z.knl
src/jai/forthip2/: halo_1rank.knl  halo_recvbuf.knl  halo_sendbuf.knl  halo_z.knl  miniWeather_accel.jl  reduction.knl  tend_x.knl
src/jai/forthip3/: halo_1rank.knl  miniWeather_accel.jl  tend_x_calc.knl  tend_z.knl
src/jai/forthip3/debug1/: fortver.out  hipver.out  miniWeather_accel.jl  tend_apply.knl  tend_z_calc.knl
src/jai/forthip3/debug2/: halo_z.knl  hipver.out  tend_x.knl
src/jai/forthip3/debug3/: miniWeather_accel.jl  tend_x_calc.knl  tend_z.knl  tend_z_calc.knl
src/jai/forthip3/debug4/: halo_z.knl  tend_x.knl  tend_z.knl
src/jai/forthip_debug/: miniWeather_accel.jl  tend_x.knl  tend_z_calc.knl
src/jai/forthip_debug/debug3/: fortver.out
src/jai/forthip_debug/debug4/: halo_1rank.knl  miniWeather_accel.jl  reduction.knl  tend_apply.knl
src/jai/fortran/: halo_1rank.knl  miniWeather_accel.jl  miniWeather_accel.jl.org
src/jai/fortran_hip_ver1/: halo_inject.knl  halo_z.knl  miniWeather_accel.jl  tend_apply.knl  tend_z_calc.knl
src/jai/fortran_hip_ver2/: miniWeather_accel.jl  tend_z.knl
src/jai/fortran_omptarget/: halo_1rank.knl  halo_inject.knl  halo_recvbuf.knl  halo_sendbuf.knl  halo_z.knl  miniWeather_accel.jl  reduction.knl  tend_apply.knl  tend_x.knl  tend_x_calc.knl  tend_z.knl  tend_z_calc.knl
src/jai/fortran_openacc/: halo_1rank.knl  halo_inject.knl  halo_recvbuf.knl  halo_sendbuf.knl  halo_z.knl  miniWeather_accel.jl  reduction.knl  tend_apply.knl  tend_x.knl  tend_x_calc.knl  tend_z.knl  tend_z_calc.knl
src/jai/fortran_openacc_omptarget_cuda_hip/: halo_1rank.knl  halo_inject.knl  halo_recvbuf.knl  halo_sendbuf.knl  halo_z.knl  miniWeather_accel.jl  reduction.knl  tend_apply.knl  tend_x.knl  tend_x_calc.knl  tend_z.knl  tend_z_calc.knl
src/jai/knls/: tend_apply.knl  tend_apply_diff.knl  tend_apply_same.knl
src/jai/oldforthip/forthip1/: miniWeather_accel.jl
src/jai_incremental/: halo_sendbuf.knl  miniWeather_accel.jl  tend_x.knl
src/julia/: constants.jl  miniWeather_mpi.jl  miniWeather_mpi_2globals.jl  miniWeather_mpi_const.jl  miniWeather_mpi_globals.jl  miniWeather_mpi_module.jl  miniWeather_mpi_org.jl  miniWeather_mpi_struct.jl  perfnote.txt
src/julia/modularized/: constants.jl  miniWeather_mpi_module.jl  timestep.jl  variables.jl
src/manual/: miniWeather_openacc.jl  openacc_driver_100x50.F90
(+18 files in other folders)
